fixed header container width on mobile

--- a/landingPage/mainStyle.css
+++ b/landingPage/mainStyle.css
@@ -111,14 +111,17 @@ h2{
         width: 60%;
     }
 }
+@media screen and (max-width: 500px) {
+    #header-container {
+        width: 85%;
+    }
+}
 @media screen and (max-width: 413px) {
     .pad {
         font-size: large;
         padding: 4px;
       
     }
-    #header-container {
-        width: 85%;
-    }
+    
 
 }
